Improve default ensemble method selection by data type
The default ensemble method is now chosen based on the data type (text, image, audio), providing more relevant defaults for each case. Also, minor XAML cleanup was performed by removing an unnecessary HeightRequest attribute.

--- a/src/CSimple/Pages/OrientPage.xaml
+++ b/src/CSimple/Pages/OrientPage.xaml
@@ -239,8 +239,7 @@
                             FontSize="12"
                             BackgroundColor="{AppThemeBinding Light={StaticResource CardBackgroundLight}, Dark={StaticResource CardBackgroundDark}}"
                             TextColor="{AppThemeBinding Light={StaticResource TextPrimaryLight}, Dark={StaticResource TextPrimaryDark}}"
-                            TitleColor="{AppThemeBinding Light={StaticResource TextSecondaryLight}, Dark={StaticResource TextSecondaryDark}}"
-                            HeightRequest="40" />
+                            TitleColor="{AppThemeBinding Light={StaticResource TextSecondaryLight}, Dark={StaticResource TextSecondaryDark}}"/>
                     <Label Text="{Binding SelectedNode.EnsembleInputCount, StringFormat='Inputs: {0}'}"
                            FontSize="10"
                            TextColor="{AppThemeBinding Light={StaticResource TextSecondaryLight}, Dark={StaticResource TextSecondaryDark}}" />
