--- a/src/CSimple/Pages/OrientPage.xaml
+++ b/src/CSimple/Pages/OrientPage.xaml
@@ -267,6 +267,18 @@
                         <Button Text="Stop"
                                 Command="{Binding StopAudioCommand}" />
                     </StackLayout>
+                        <StackLayout IsVisible="{Binding SelectedNode, Converter={StaticResource ShowEnsembleMethodConverter}}"
+                                Spacing="4"
+                                Margin="0,8,0,0">
+                                <Button Text="Generate"
+                                        BackgroundColor="{StaticResource Primary}"
+                                        TextColor="{AppThemeBinding Light={StaticResource TextOnPrimary}, Dark={StaticResource TextOnPrimary}}"
+                                        FontSize="12"
+                                        CornerRadius="5"
+                                        Padding="8,4"
+                                        Margin="0,4,0,0" />
+                        </StackLayout>
+
                 </StackLayout>
             </VerticalStackLayout>
         </Border>
